--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <title>Threvity</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin: 20px;
+    margin: 10px;
+    padding: 0;
   }
   #history {
     height: 150px;
@@ -16,27 +18,47 @@
     justify-content: flex-start;
     align-items: center;
     overflow: hidden;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    width: 90%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .history-item {
     opacity: 0.8;
     transition: opacity 1s;
+    word-wrap: break-word;
+    width: 100%;
   }
   #letters {
     font-size: 2em;
-    margin: 20px;
+    margin: 15px auto;
+    width: 90%;
+    max-width: 400px;
+    word-wrap: break-word;
   }
   input[type=text] {
-    padding: 5px;
+    padding: 10px;
     font-size: 1em;
+    width: 90%;
+    max-width: 400px;
+    box-sizing: border-box;
   }
   button {
-    margin: 5px;
-    padding: 5px 10px;
+    margin: 5px 2px;
+    padding: 10px 15px;
     font-size: 1em;
+    width: 45%;
+    max-width: 190px;
+    box-sizing: border-box;
   }
   #endInfo {
     margin-top: 20px;
+    width: 90%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    word-wrap: break-word;
   }
 </style>
 </head>
@@ -147,7 +169,6 @@ function updateHistory(){
 
 function endGame(){
   document.getElementById("message").textContent = `Game over. Final Score: ${score}`;
-  // Longest word should be from the original seed
   const seedWords = search(allWords, seed);
   const longestSeedWord = maxWord(seedWords);
   const allPossible = search(allWords, history[history.length-1]);
