--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 <div id="history"></div>
 <div id="letters"></div>
 <input type="text" id="wordInput" placeholder="Enter word" />
-<button id="submitBtn">Submit</button>
+<div id="submitRow">
+  <button id="submitBtn">Submit</button>
 <div id="buttonRow">
   <button id="undoBtn">Undo</button>
-  <button id="quitBtn">Quit</button>
-  <button id="replayBtn">Replay</button>
+  <button id="quitBtn">Give Up</button>
+  <button id="replayBtn">New Game</button>
 </div>
 <div id="message"></div>
 <div id="endInfo"></div>
